# swe-autonomous-agent

./: .coverage  .env  .env.template  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  cov_out.txt  docker-compose.dev.yml  docker-compose.yml  env.py  out.txt  pyproject.toml  test_out.txt
