[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swe-agent"
version = "1.0.0"
description = "Autonomous Software Engineering Agent — Production Grade"
requires-python = ">=3.12"

dependencies = [
    # Orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.1.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # GitHub
    "PyGithub>=2.4.0",
    "gitpython>=3.1.43",

    # Queue & Cache
    "redis>=5.2.0",
    "rq>=1.16.0",

    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",

    # Docker sandbox
    "docker>=7.1.0",

    # Code parsing
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",

    # Search
    "rank-bm25>=0.2.2",
    "tiktoken>=0.8.0",

    # Observability
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",

    # Utils
    "tenacity>=9.0.0",
    "python-multipart>=0.0.18",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "typer>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
cache_dir = "test_out/pytest_cache"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
